Funçaõ Enviar email após encerrar o pedido.

--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings": {
+    "PrimaryDomain": "smtp.gmail.com",
+    "PrimaryPort": "587",
+    "UsernameEmail": "emerson.reis@efabrika.com.br",
+    "UsernamePassword": "Petinha@,#10amor",
+    "FromEmail": "fromEmail",
+    "ToEmail": "emersonreis22664@gmail.com",
+    "CcEmail": "reis63402@gmail.com"
+  },
   "AllowedHosts": "*"
 }
