--- a/LanchesMac/LanchesMac.csproj
+++ b/LanchesMac/LanchesMac.csproj
@@ -16,6 +16,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Areas\Admin\Views\AdminCategorias\Create.cshtml" />
+    <None Include="Areas\Admin\Views\AdminCategorias\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\AdminCategorias\Details.cshtml" />
+    <None Include="Areas\Admin\Views\AdminCategorias\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\AdminCategorias\Index.cshtml" />
+    <None Include="Areas\Admin\Views\AdminLanches\Create.cshtml" />
+    <None Include="Areas\Admin\Views\AdminLanches\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\AdminLanches\Details.cshtml" />
+    <None Include="Areas\Admin\Views\AdminLanches\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\AdminLanches\Index.cshtml" />
+    <None Include="Areas\Admin\Views\AdminPedidos\Create.cshtml" />
+    <None Include="Areas\Admin\Views\AdminPedidos\Delete.cshtml" />
+    <None Include="Areas\Admin\Views\AdminPedidos\Details.cshtml" />
+    <None Include="Areas\Admin\Views\AdminPedidos\Edit.cshtml" />
+    <None Include="Areas\Admin\Views\AdminPedidos\Index.cshtml" />
     <None Include="Areas\Admin\Views\Admin\Index.cshtml" />
     <None Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
     <None Include="Areas\Admin\Views\_ViewImports.cshtml" />
@@ -28,12 +43,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+    <PackageReference Include="ReflectionIT.Mvc.Paging" Version="6.0.1" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
   </ItemGroup>
