--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PC-RERUM000191; Initial Catalog=LancheMach;Integrated Security=True"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
